// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`buildChakraSequence — the 7-center session > planetary: byte-identical + golden snapshot 1`] = `
[
  {
    "fork": null,
    "holdSec": 79,
    "hz": 0,
    "idx": 0,
    "phaseLabel": "Open · Centering",
    "planet": "Breath",
    "purpose": "settle at the crown with a few slow breaths before the descent",
    "role": "breathwork",
    "slotLabel": "breath",
    "startSec": 0,
  },
  {
    "centerColor": "#B447FF",
    "fork": {
      "ANSEffect": "Parasympathetic — vagal hepatic stimulation supports liver detoxification processes, bile flow, and the emotional release patterns held in the liver according to both Eastern medicine and somatic psychology.",
      "boneApplicationPoint": "Right lateral ribs (over the liver, ribs 7-10), T8-T10 thoracic vertebrae",
      "brainwaveAffinity": "Alpha-Beta bridge (10–15 Hz)",
      "brainwaveState": "Metabolic ease, expansive mental states, digestive activation, liver-emotion processing (anger/frustration release)",
      "chakra": "Crown",
      "clinicalNote": "In Chinese medicine, the liver stores unexpressed anger and frustration. In anatomy, the liver is the largest internal organ and a primary site of metabolic processing. The Jupiter fork at the right lateral ribs activates both the hepatic vagal pathway and the somatic release of stored liver tension. Clients may experience a spontaneous exhale, warmth, or emotional softening.",
      "color": "#818CF8",
      "hz": "183.58",
      "nervePlexus": "Hepatic Plexus + Splenic Plexus (liver and digestive organ innervation)",
      "note": "F#",
      "planet": "Jupiter",
      "solfeggioFallback": 963,
      "vagusConnection": "Direct — the vagus nerve innervates the liver directly via the hepatic branch. This is a primary vagal organ target.",
      "vagusStrength": "Medium-High — hepatic vagal branch",
    },
    "holdSec": 111,
    "hz": 183.58,
    "idx": 1,
    "phaseLabel": "Descent · Crown",
    "planet": "Jupiter",
    "purpose": "sound the Jupiter fork at the top of the head — let the crown center receive it",
    "role": "signalFork",
    "slotLabel": "signal",
    "startSec": 79,
  },
  {
    "centerColor": "#5B47FF",
    "fork": {
      "ANSEffect": "Deep parasympathetic — the limbic system is the emotional brain. Neptune's frequency through the temporal bones activates the limbic-vagal circuit, which governs emotional memory release, spiritual experience, and the nervous system states associated with deep meditation and visionary work.",
      "boneApplicationPoint": "Temporal bones, sphenoid base, occipital base — cranial base bones",
      "brainwaveAffinity": "Theta-Delta bridge (3–7 Hz)",
      "brainwaveState": "Dream-adjacent states, spiritual vision, emotional memory integration, subconscious healing, dissolution of ego-boundaries",
      "chakra": "Third Eye",
      "clinicalNote": "Neptune is the frequency of the unseen and the deeply felt. Apply very gently to the temporal bones or hold the vibrating fork in the field near the ears without contact. Many clients report visual imagery, emotional release, or dream-like states. This is the appropriate frequency for trauma integration work where direct body contact may feel too activating.",
      "color": "#C084FC",
      "hz": "211.44",
      "nervePlexus": "Pineal-Hypothalamic Axis + Limbic System (amygdala, hippocampus, thalamus)",
      "note": "G#",
      "planet": "Neptune",
      "solfeggioFallback": 852,
      "vagusConnection": "Direct — limbic-vagal circuits govern emotional memory, spiritual experience, and the integration of conscious and unconscious nervous system states",
      "vagusStrength": "Medium — via limbic-vagal pathway",
    },
    "holdSec": 111,
    "hz": 211.44,
    "idx": 2,
    "phaseLabel": "Descent · Third Eye",
    "planet": "Neptune",
    "purpose": "sound the Neptune fork at the point between the brows — let the third eye center receive it",
    "role": "signalFork",
    "slotLabel": "signal",
    "startSec": 190,
  },
  {
    "centerColor": "#1FB6FF",
    "fork": {
      "ANSEffect": "Parasympathetic — laryngeal nerve stimulation activates vagal tone immediately and measurably. The mastoid application is used in clinical vagus nerve stimulation protocols. Clients with thyroid dysregulation, voice loss, fear of speaking, or cervical tension respond rapidly.",
      "boneApplicationPoint": "Mastoid process (behind the ear — primary vagal bone conduction point), C1-C2 atlas/axis vertebrae, hyoid bone",
      "brainwaveAffinity": "Alpha (8–12 Hz)",
      "brainwaveState": "Clear expression, mental coherence, throat release, truth-telling, laryngeal relaxation",
      "chakra": "Throat",
      "clinicalNote": "The mastoid process (the bony protrusion directly behind the earlobe) is the practitioner's primary access point to the vagus nerve via bone conduction. Apply the Mercury fork here at the start of any session requiring nervous system downregulation. This is the fastest single-point vagal entry in the body accessible without specialized equipment.",
      "color": "#38BDF8",
      "hz": "141.27",
      "nervePlexus": "Cervical Plexus (C1-C4) + Laryngeal Nerve (direct branch of Vagus, CN X)",
      "note": "G",
      "planet": "Mercury",
      "solfeggioFallback": 741,
      "vagusConnection": "Direct — the laryngeal nerve is a branch of the vagus. The mastoid process is the standard clinical entry point for vagal stimulation via bone-conducted sound in sound therapy.",
      "vagusStrength": "Direct-Primary",
    },
    "holdSec": 111,
    "hz": 141.27,
    "idx": 3,
    "phaseLabel": "Descent · Throat",
    "planet": "Mercury",
    "purpose": "sound the Mercury fork at the hollow of the throat — let the throat center receive it",
    "role": "signalFork",
    "slotLabel": "signal",
    "startSec": 301,
  },
  {
    "centerColor": "#43E66A",
    "fork": {
      "ANSEffect": "Neural coherence — modulates the master neuroendocrine axis (hypothalamus-pituitary-adrenal). The hypothalamic-vagal connection governs the body's autonomic setpoint — where the nervous system defaults to under stress. Resetting this is the deepest nervous system work.",
      "boneApplicationPoint": "Sphenoid bone (behind the eye socket), frontal bone (center of forehead), occiput (base of skull, posterior)",
      "brainwaveAffinity": "Theta-Gamma bridge (intuitive and integrative states)",
      "brainwaveState": "Intuitive insight, pineal activation, pattern recognition, neuroendocrine reset, visual cortex activation",
      "chakra": "Heart",
      "clinicalNote": "The sphenoid is the central bone of the cranium — it connects to every other cranial bone. It is a primary bone in craniosacral therapy. The Venus fork at the occiput (base of skull) accesses the cranial base and the junction between the skull and the spinal column — a major site of nervous system compression and release.",
      "color": "#818CF8",
      "hz": "221.23",
      "nervePlexus": "Cavernous Plexus + Hypothalamic-Pituitary Axis + Ophthalmic branch of Trigeminal Nerve (CN V)",
      "note": "A",
      "planet": "Venus",
      "solfeggioFallback": 639,
      "vagusConnection": "Indirect — hypothalamic modulation of the dorsal vagal complex in the brainstem. Hypothalamic-vagal axis governs stress hormones and autonomic setpoint.",
      "vagusStrength": "Medium — via neuroendocrine pathway",
    },
    "holdSec": 111,
    "hz": 221.23,
    "idx": 4,
    "phaseLabel": "Descent · Heart",
    "planet": "Venus",
    "purpose": "sound the Venus fork at the center of the chest — let the heart center receive it",
    "role": "signalFork",
    "slotLabel": "signal",
    "startSec": 412,
  },
  {
    "centerColor": "#FFD600",
    "fork": {
      "ANSEffect": "Sympathetic-Parasympathetic bridge — the celiac plexus is literally the anatomical 'solar plexus.' Regulates the gut-brain axis, digestive fire, metabolic processing. Vagal stimulation here reduces gut inflammation and stress-held tension.",
      "boneApplicationPoint": "Lower thoracic vertebrae T10-T12, floating ribs (11-12), lower sternum",
      "brainwaveAffinity": "Alpha (8–12 Hz)",
      "brainwaveState": "Relaxed focus, gut-brain coherence, digestive ease, personal power without stress activation",
      "chakra": "Solar Plexus",
      "clinicalNote": "The enteric nervous system is the most autonomous nerve network in the body — it functions independently of the brain. Clients with IBS, digestive disorders, anxiety held in the gut, or trauma responses centered in the belly respond profoundly here. The Sun fork at 126.22 Hz is one of the most clinically versatile in the Sacred Tones system.",
      "color": "#FDE047",
      "hz": "126.22",
      "nervePlexus": "Celiac Plexus + Enteric Nervous System (second brain — 500 million neurons)",
      "note": "C",
      "planet": "Sun",
      "solfeggioFallback": 528,
      "vagusConnection": "Direct — the vagus nerve sends primary branches to the celiac plexus and entire gut via the hepatic and gastric branches",
      "vagusStrength": "High",
    },
    "holdSec": 111,
    "hz": 126.22,
    "idx": 5,
    "phaseLabel": "Descent · Solar Plexus",
    "planet": "Sun",
    "purpose": "sound the Sun fork at the upper abdomen — let the solar plexus center receive it",
    "role": "signalFork",
    "slotLabel": "signal",
    "startSec": 523,
  },
  {
    "centerColor": "#FF8A1A",
    "fork": {
      "ANSEffect": "Parasympathetic — pelvic floor release, emotional nervous system regulation, promotes fluid movement in sacral-cranial rhythm",
      "boneApplicationPoint": "Iliac crests (hip bones), sacrum, L4-L5 lumbar vertebrae",
      "brainwaveAffinity": "Theta (4–8 Hz)",
      "brainwaveState": "Creative flow, emotional processing, subconscious access, somatic memory release",
      "chakra": "Sacral",
      "clinicalNote": "The sacral plexus governs creative and reproductive nerve flow. Clients holding trauma in the pelvis will often respond strongly to this fork. Apply to the iliac crest bilaterally for maximum sacral plexus activation. Works in tandem with the craniosacral rhythm — observe for breath changes.",
      "color": "#FB923C",
      "hz": "210.42",
      "nervePlexus": "Sacral Plexus (L4-S3) + Lumbosacral Trunk",
      "note": "G#",
      "planet": "Full Moon",
      "solfeggioFallback": 417,
      "vagusConnection": "Indirect — pelvic splanchnic nerves interface with the enteric nervous system",
      "vagusStrength": "Low-Medium",
    },
    "holdSec": 111,
    "hz": 210.42,
    "idx": 6,
    "phaseLabel": "Descent · Sacral",
    "planet": "Moon",
    "purpose": "sound the Full Moon fork at the point just below the navel — let the sacral center receive it",
    "role": "signalFork",
    "slotLabel": "signal",
    "startSec": 634,
  },
  {
    "centerColor": "#FF3D5C",
    "fork": null,
    "holdSec": 111,
    "hz": 194.18,
    "idx": 7,
    "phaseLabel": "Descent · Root",
    "planet": "Earth",
    "purpose": "sound the Earth Day fork at the base of the spine — let the root center receive it",
    "role": "signalFork",
    "slotLabel": "signal",
    "startSec": 745,
  },
  {
    "centerColor": "#FF3D5C",
    "fork": null,
    "holdSec": 85,
    "hz": 194.18,
    "idx": 8,
    "phaseLabel": "Ascent · Root",
    "planet": "Earth",
    "purpose": "sound the Earth Day fork again at the base of the spine — the root center answers on the way up",
    "role": "signalFork",
    "slotLabel": "signal",
    "startSec": 856,
  },
  {
    "centerColor": "#FF8A1A",
    "fork": {
      "ANSEffect": "Parasympathetic — pelvic floor release, emotional nervous system regulation, promotes fluid movement in sacral-cranial rhythm",
      "boneApplicationPoint": "Iliac crests (hip bones), sacrum, L4-L5 lumbar vertebrae",
      "brainwaveAffinity": "Theta (4–8 Hz)",
      "brainwaveState": "Creative flow, emotional processing, subconscious access, somatic memory release",
      "chakra": "Sacral",
      "clinicalNote": "The sacral plexus governs creative and reproductive nerve flow. Clients holding trauma in the pelvis will often respond strongly to this fork. Apply to the iliac crest bilaterally for maximum sacral plexus activation. Works in tandem with the craniosacral rhythm — observe for breath changes.",
      "color": "#FB923C",
      "hz": "210.42",
      "nervePlexus": "Sacral Plexus (L4-S3) + Lumbosacral Trunk",
      "note": "G#",
      "planet": "Full Moon",
      "solfeggioFallback": 417,
      "vagusConnection": "Indirect — pelvic splanchnic nerves interface with the enteric nervous system",
      "vagusStrength": "Low-Medium",
    },
    "holdSec": 85,
    "hz": 210.42,
    "idx": 9,
    "phaseLabel": "Ascent · Sacral",
    "planet": "Moon",
    "purpose": "sound the Full Moon fork again at the point just below the navel — the sacral center answers on the way up",
    "role": "signalFork",
    "slotLabel": "signal",
    "startSec": 941,
  },
  {
    "centerColor": "#FFD600",
    "fork": {
      "ANSEffect": "Sympathetic-Parasympathetic bridge — the celiac plexus is literally the anatomical 'solar plexus.' Regulates the gut-brain axis, digestive fire, metabolic processing. Vagal stimulation here reduces gut inflammation and stress-held tension.",
      "boneApplicationPoint": "Lower thoracic vertebrae T10-T12, floating ribs (11-12), lower sternum",
      "brainwaveAffinity": "Alpha (8–12 Hz)",
      "brainwaveState": "Relaxed focus, gut-brain coherence, digestive ease, personal power without stress activation",
      "chakra": "Solar Plexus",
      "clinicalNote": "The enteric nervous system is the most autonomous nerve network in the body — it functions independently of the brain. Clients with IBS, digestive disorders, anxiety held in the gut, or trauma responses centered in the belly respond profoundly here. The Sun fork at 126.22 Hz is one of the most clinically versatile in the Sacred Tones system.",
      "color": "#FDE047",
      "hz": "126.22",
      "nervePlexus": "Celiac Plexus + Enteric Nervous System (second brain — 500 million neurons)",
      "note": "C",
      "planet": "Sun",
      "solfeggioFallback": 528,
      "vagusConnection": "Direct — the vagus nerve sends primary branches to the celiac plexus and entire gut via the hepatic and gastric branches",
      "vagusStrength": "High",
    },
    "holdSec": 85,
    "hz": 126.22,
    "idx": 10,
    "phaseLabel": "Ascent · Solar Plexus",
    "planet": "Sun",
    "purpose": "sound the Sun fork again at the upper abdomen — the solar plexus center answers on the way up",
    "role": "signalFork",
    "slotLabel": "signal",
    "startSec": 1026,
  },
  {
    "centerColor": "#43E66A",
    "fork": {
      "ANSEffect": "Neural coherence — modulates the master neuroendocrine axis (hypothalamus-pituitary-adrenal). The hypothalamic-vagal connection governs the body's autonomic setpoint — where the nervous system defaults to under stress. Resetting this is the deepest nervous system work.",
      "boneApplicationPoint": "Sphenoid bone (behind the eye socket), frontal bone (center of forehead), occiput (base of skull, posterior)",
      "brainwaveAffinity": "Theta-Gamma bridge (intuitive and integrative states)",
      "brainwaveState": "Intuitive insight, pineal activation, pattern recognition, neuroendocrine reset, visual cortex activation",
      "chakra": "Heart",
      "clinicalNote": "The sphenoid is the central bone of the cranium — it connects to every other cranial bone. It is a primary bone in craniosacral therapy. The Venus fork at the occiput (base of skull) accesses the cranial base and the junction between the skull and the spinal column — a major site of nervous system compression and release.",
      "color": "#818CF8",
      "hz": "221.23",
      "nervePlexus": "Cavernous Plexus + Hypothalamic-Pituitary Axis + Ophthalmic branch of Trigeminal Nerve (CN V)",
      "note": "A",
      "planet": "Venus",
      "solfeggioFallback": 639,
      "vagusConnection": "Indirect — hypothalamic modulation of the dorsal vagal complex in the brainstem. Hypothalamic-vagal axis governs stress hormones and autonomic setpoint.",
      "vagusStrength": "Medium — via neuroendocrine pathway",
    },
    "holdSec": 85,
    "hz": 221.23,
    "idx": 11,
    "phaseLabel": "Ascent · Heart",
    "planet": "Venus",
    "purpose": "sound the Venus fork again at the center of the chest — the heart center answers on the way up",
    "role": "signalFork",
    "slotLabel": "signal",
    "startSec": 1111,
  },
  {
    "centerColor": "#1FB6FF",
    "fork": {
      "ANSEffect": "Parasympathetic — laryngeal nerve stimulation activates vagal tone immediately and measurably. The mastoid application is used in clinical vagus nerve stimulation protocols. Clients with thyroid dysregulation, voice loss, fear of speaking, or cervical tension respond rapidly.",
      "boneApplicationPoint": "Mastoid process (behind the ear — primary vagal bone conduction point), C1-C2 atlas/axis vertebrae, hyoid bone",
      "brainwaveAffinity": "Alpha (8–12 Hz)",
      "brainwaveState": "Clear expression, mental coherence, throat release, truth-telling, laryngeal relaxation",
      "chakra": "Throat",
      "clinicalNote": "The mastoid process (the bony protrusion directly behind the earlobe) is the practitioner's primary access point to the vagus nerve via bone conduction. Apply the Mercury fork here at the start of any session requiring nervous system downregulation. This is the fastest single-point vagal entry in the body accessible without specialized equipment.",
      "color": "#38BDF8",
      "hz": "141.27",
      "nervePlexus": "Cervical Plexus (C1-C4) + Laryngeal Nerve (direct branch of Vagus, CN X)",
      "note": "G",
      "planet": "Mercury",
      "solfeggioFallback": 741,
      "vagusConnection": "Direct — the laryngeal nerve is a branch of the vagus. The mastoid process is the standard clinical entry point for vagal stimulation via bone-conducted sound in sound therapy.",
      "vagusStrength": "Direct-Primary",
    },
    "holdSec": 85,
    "hz": 141.27,
    "idx": 12,
    "phaseLabel": "Ascent · Throat",
    "planet": "Mercury",
    "purpose": "sound the Mercury fork again at the hollow of the throat — the throat center answers on the way up",
    "role": "signalFork",
    "slotLabel": "signal",
    "startSec": 1196,
  },
  {
    "centerColor": "#5B47FF",
    "fork": {
      "ANSEffect": "Deep parasympathetic — the limbic system is the emotional brain. Neptune's frequency through the temporal bones activates the limbic-vagal circuit, which governs emotional memory release, spiritual experience, and the nervous system states associated with deep meditation and visionary work.",
      "boneApplicationPoint": "Temporal bones, sphenoid base, occipital base — cranial base bones",
      "brainwaveAffinity": "Theta-Delta bridge (3–7 Hz)",
      "brainwaveState": "Dream-adjacent states, spiritual vision, emotional memory integration, subconscious healing, dissolution of ego-boundaries",
      "chakra": "Third Eye",
      "clinicalNote": "Neptune is the frequency of the unseen and the deeply felt. Apply very gently to the temporal bones or hold the vibrating fork in the field near the ears without contact. Many clients report visual imagery, emotional release, or dream-like states. This is the appropriate frequency for trauma integration work where direct body contact may feel too activating.",
      "color": "#C084FC",
      "hz": "211.44",
      "nervePlexus": "Pineal-Hypothalamic Axis + Limbic System (amygdala, hippocampus, thalamus)",
      "note": "G#",
      "planet": "Neptune",
      "solfeggioFallback": 852,
      "vagusConnection": "Direct — limbic-vagal circuits govern emotional memory, spiritual experience, and the integration of conscious and unconscious nervous system states",
      "vagusStrength": "Medium — via limbic-vagal pathway",
    },
    "holdSec": 85,
    "hz": 211.44,
    "idx": 13,
    "phaseLabel": "Ascent · Third Eye",
    "planet": "Neptune",
    "purpose": "sound the Neptune fork again at the point between the brows — the third eye center answers on the way up",
    "role": "signalFork",
    "slotLabel": "signal",
    "startSec": 1281,
  },
  {
    "centerColor": "#B447FF",
    "fork": {
      "ANSEffect": "Parasympathetic — vagal hepatic stimulation supports liver detoxification processes, bile flow, and the emotional release patterns held in the liver according to both Eastern medicine and somatic psychology.",
      "boneApplicationPoint": "Right lateral ribs (over the liver, ribs 7-10), T8-T10 thoracic vertebrae",
      "brainwaveAffinity": "Alpha-Beta bridge (10–15 Hz)",
      "brainwaveState": "Metabolic ease, expansive mental states, digestive activation, liver-emotion processing (anger/frustration release)",
      "chakra": "Crown",
      "clinicalNote": "In Chinese medicine, the liver stores unexpressed anger and frustration. In anatomy, the liver is the largest internal organ and a primary site of metabolic processing. The Jupiter fork at the right lateral ribs activates both the hepatic vagal pathway and the somatic release of stored liver tension. Clients may experience a spontaneous exhale, warmth, or emotional softening.",
      "color": "#818CF8",
      "hz": "183.58",
      "nervePlexus": "Hepatic Plexus + Splenic Plexus (liver and digestive organ innervation)",
      "note": "F#",
      "planet": "Jupiter",
      "solfeggioFallback": 963,
      "vagusConnection": "Direct — the vagus nerve innervates the liver directly via the hepatic branch. This is a primary vagal organ target.",
      "vagusStrength": "Medium-High — hepatic vagal branch",
    },
    "holdSec": 85,
    "hz": 183.58,
    "idx": 14,
    "phaseLabel": "Ascent · Crown",
    "planet": "Jupiter",
    "purpose": "sound the Jupiter fork again at the top of the head — the crown center answers on the way up",
    "role": "signalFork",
    "slotLabel": "signal",
    "startSec": 1366,
  },
  {
    "fork": null,
    "holdSec": 199,
    "hz": 136.1,
    "idx": 15,
    "phaseLabel": "Close · Earth Grounding",
    "planet": "Earth",
    "purpose": "ground the body and integrate — the session completes here",
    "role": "earthClose",
    "slotLabel": "ground",
    "startSec": 1451,
  },
]
`;

exports[`buildChakraSequence — the 7-center session > solfeggio: byte-identical + golden snapshot 1`] = `
[
  {
    "fork": null,
    "holdSec": 79,
    "hz": 0,
    "idx": 0,
    "phaseLabel": "Open · Centering",
    "planet": "Breath",
    "purpose": "settle at the crown with a few slow breaths before the descent",
    "role": "breathwork",
    "slotLabel": "breath",
    "startSec": 0,
  },
  {
    "centerColor": "#B447FF",
    "fork": null,
    "holdSec": 111,
    "hz": 963,
    "idx": 1,
    "phaseLabel": "Descent · Crown",
    "planet": "Jupiter",
    "purpose": "sound the 963 Hz Solfeggio fork at the top of the head — let the crown center receive it",
    "role": "signalFork",
    "slotLabel": "signal",
    "startSec": 79,
  },
  {
    "centerColor": "#5B47FF",
    "fork": null,
    "holdSec": 111,
    "hz": 852,
    "idx": 2,
    "phaseLabel": "Descent · Third Eye",
    "planet": "Neptune",
    "purpose": "sound the 852 Hz Solfeggio fork at the point between the brows — let the third eye center receive it",
    "role": "signalFork",
    "slotLabel": "signal",
    "startSec": 190,
  },
  {
    "centerColor": "#1FB6FF",
    "fork": null,
    "holdSec": 111,
    "hz": 741,
    "idx": 3,
    "phaseLabel": "Descent · Throat",
    "planet": "Mercury",
    "purpose": "sound the 741 Hz Solfeggio fork at the hollow of the throat — let the throat center receive it",
    "role": "signalFork",
    "slotLabel": "signal",
    "startSec": 301,
  },
  {
    "centerColor": "#43E66A",
    "fork": null,
    "holdSec": 111,
    "hz": 639,
    "idx": 4,
    "phaseLabel": "Descent · Heart",
    "planet": "Venus",
    "purpose": "sound the 639 Hz Solfeggio fork at the center of the chest — let the heart center receive it",
    "role": "signalFork",
    "slotLabel": "signal",
    "startSec": 412,
  },
  {
    "centerColor": "#FFD600",
    "fork": null,
    "holdSec": 111,
    "hz": 528,
    "idx": 5,
    "phaseLabel": "Descent · Solar Plexus",
    "planet": "Sun",
    "purpose": "sound the 528 Hz Solfeggio fork at the upper abdomen — let the solar plexus center receive it",
    "role": "signalFork",
    "slotLabel": "signal",
    "startSec": 523,
  },
  {
    "centerColor": "#FF8A1A",
    "fork": null,
    "holdSec": 111,
    "hz": 417,
    "idx": 6,
    "phaseLabel": "Descent · Sacral",
    "planet": "Moon",
    "purpose": "sound the 417 Hz Solfeggio fork at the point just below the navel — let the sacral center receive it",
    "role": "signalFork",
    "slotLabel": "signal",
    "startSec": 634,
  },
  {
    "centerColor": "#FF3D5C",
    "fork": null,
    "holdSec": 111,
    "hz": 396,
    "idx": 7,
    "phaseLabel": "Descent · Root",
    "planet": "Earth",
    "purpose": "sound the 396 Hz Solfeggio fork at the base of the spine — let the root center receive it",
    "role": "signalFork",
    "slotLabel": "signal",
    "startSec": 745,
  },
  {
    "centerColor": "#FF3D5C",
    "fork": null,
    "holdSec": 85,
    "hz": 396,
    "idx": 8,
    "phaseLabel": "Ascent · Root",
    "planet": "Earth",
    "purpose": "sound the 396 Hz Solfeggio fork again at the base of the spine — the root center answers on the way up",
    "role": "signalFork",
    "slotLabel": "signal",
    "startSec": 856,
  },
  {
    "centerColor": "#FF8A1A",
    "fork": null,
    "holdSec": 85,
    "hz": 417,
    "idx": 9,
    "phaseLabel": "Ascent · Sacral",
    "planet": "Moon",
    "purpose": "sound the 417 Hz Solfeggio fork again at the point just below the navel — the sacral center answers on the way up",
    "role": "signalFork",
    "slotLabel": "signal",
    "startSec": 941,
  },
  {
    "centerColor": "#FFD600",
    "fork": null,
    "holdSec": 85,
    "hz": 528,
    "idx": 10,
    "phaseLabel": "Ascent · Solar Plexus",
    "planet": "Sun",
    "purpose": "sound the 528 Hz Solfeggio fork again at the upper abdomen — the solar plexus center answers on the way up",
    "role": "signalFork",
    "slotLabel": "signal",
    "startSec": 1026,
  },
  {
    "centerColor": "#43E66A",
    "fork": null,
    "holdSec": 85,
    "hz": 639,
    "idx": 11,
    "phaseLabel": "Ascent · Heart",
    "planet": "Venus",
    "purpose": "sound the 639 Hz Solfeggio fork again at the center of the chest — the heart center answers on the way up",
    "role": "signalFork",
    "slotLabel": "signal",
    "startSec": 1111,
  },
  {
    "centerColor": "#1FB6FF",
    "fork": null,
    "holdSec": 85,
    "hz": 741,
    "idx": 12,
    "phaseLabel": "Ascent · Throat",
    "planet": "Mercury",
    "purpose": "sound the 741 Hz Solfeggio fork again at the hollow of the throat — the throat center answers on the way up",
    "role": "signalFork",
    "slotLabel": "signal",
    "startSec": 1196,
  },
  {
    "centerColor": "#5B47FF",
    "fork": null,
    "holdSec": 85,
    "hz": 852,
    "idx": 13,
    "phaseLabel": "Ascent · Third Eye",
    "planet": "Neptune",
    "purpose": "sound the 852 Hz Solfeggio fork again at the point between the brows — the third eye center answers on the way up",
    "role": "signalFork",
    "slotLabel": "signal",
    "startSec": 1281,
  },
  {
    "centerColor": "#B447FF",
    "fork": null,
    "holdSec": 85,
    "hz": 963,
    "idx": 14,
    "phaseLabel": "Ascent · Crown",
    "planet": "Jupiter",
    "purpose": "sound the 963 Hz Solfeggio fork again at the top of the head — the crown center answers on the way up",
    "role": "signalFork",
    "slotLabel": "signal",
    "startSec": 1366,
  },
  {
    "fork": null,
    "holdSec": 199,
    "hz": 136.1,
    "idx": 15,
    "phaseLabel": "Close · Earth Grounding",
    "planet": "Earth",
    "purpose": "ground the body and integrate — the session completes here",
    "role": "earthClose",
    "slotLabel": "ground",
    "startSec": 1451,
  },
]
`;
